--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,31 @@
+absl-py==0.9.0
+astor==0.8.1
 Click==7.0
 Flask==1.1.1
+gast==0.3.2
+google-pasta==0.1.8
+grpcio==1.26.0
+h5py==2.10.0
 itsdangerous==1.1.0
 Jinja2==2.10.3
+joblib==0.14.1
+Keras==2.3.1
+Keras-Applications==1.0.8
+Keras-Preprocessing==1.1.0
+Markdown==3.1.1
 MarkupSafe==1.1.1
+numpy==1.18.1
 pkg-resources==0.0.0
+protobuf==3.11.2
+PyYAML==5.3
+scikit-learn==0.22.1
+scipy==1.4.1
+six==1.13.0
+tensorboard==1.14.0
+tensorflow==1.14.0
+tensorflow-estimator==1.14.0
+termcolor==1.1.0
+textgenrnn==1.5.0
+tqdm==4.41.1
 Werkzeug==0.16.0
+wrapt==1.11.2
