--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ mccabe==0.6.1
 nltk==3.4.5
 numpy==1.18.1
 pandas==1.0.0
+pickle-mixin==1.0.2
 pkg-resources==0.0.0
 protobuf==3.11.2
 pylint==2.4.4
